[fix] Rename VideoStream remove redundant version check simplify protobuf cmake code
Signed-off-by: PolarStarWalker <savmot1929@gmail.com>

--- a/src/Lib/CMakeLists.txt
+++ b/src/Lib/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(Peripheral)
 add_subdirectory(DataTransmissions)
 add_subdirectory(Exceptions)
 add_subdirectory(TcpSession)
-add_subdirectory(Videostream)
+add_subdirectory(VideoStream)
 add_subdirectory(Logger)
 
 add_library(Lib Lib.hpp Lib.cpp)
@@ -15,5 +15,5 @@ target_link_libraries(Lib Peripheral)
 target_link_libraries(Lib DataTransmissions)
 target_link_libraries(Lib Exceptions)
 target_link_libraries(Lib TcpSession)
-target_link_libraries(Lib Videostream)
+target_link_libraries(Lib VideoStream)
 target_link_libraries(Lib Logger)
