--- a/src/Lib/DataTransmissions/CMakeLists.txt
+++ b/src/Lib/DataTransmissions/CMakeLists.txt
@@ -1,6 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.16)
-
-project (DataTransmissions)
+﻿project (DataTransmissions)
 
 add_library(DataTransmissions DataTransmissions.hpp Socket.cpp SPI.cpp UART.cpp I2C.cpp)
 target_link_libraries(DataTransmissions ${CONAN_LIBS})
