--- a/src/Robot/Features/Video/CMakeLists.txt
+++ b/src/Robot/Features/Video/CMakeLists.txt
@@ -1,12 +1,10 @@
 project (Video)
 
-#compile .proto to c++ code
-protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS VideoMessage.proto)
+add_library(Video Video.cpp Video.hpp VideoMessage.proto)
+protobuf_generate(TARGET Video)
 
 include_directories(${Protobuf_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-add_library(Video ${PROTO_SRCS} ${PROTO_HDRS} Video.cpp Video.hpp)
 
 target_link_libraries(Video ${REQUIRED_LIBS_QUALIFIED})
 target_link_libraries(Video ${CONAN_LIBS})
